--- a/Development/FE/src/shared/components/FormElements/Input.css
+++ b/Development/FE/src/shared/components/FormElements/Input.css
@@ -1,4 +1,4 @@
-/* .form-control {
+.form-control {
   margin: 1rem 0;
 }
 
@@ -17,16 +17,17 @@
 .form-control textarea {
   width: 100%;
   font: inherit;
-  border: 1px solid #ccc;
-  background: #f8f8f8;
-  padding: 0.15rem 0.25rem;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.7);
+  background: white;
+  padding: 12px 16px;
 }
 
 .form-control input:focus,
 .form-control textarea:focus {
   outline: none;
-  background: #ebebeb;
-  border-color: #510077;
+  /* background: #ebebeb; */
+  /* border-color: #510077; */
 }
 
 .form-control--invalid label,
@@ -38,4 +39,4 @@
 .form-control--invalid textarea {
   border-color: red;
   background: #ffd1d1;
-} */
+}
