--- a/Development/FE/src/user/regist/pages/RegistIndividual.css
+++ b/Development/FE/src/user/regist/pages/RegistIndividual.css
@@ -3,6 +3,29 @@
 }
 
 .regist-event-title {
+  margin-left: 10px;
   margin-top: 5px;
   margin-bottom: 16px;
+}
+
+.regist-form {
+  position: relative;
+}
+
+.regist-form .regist-btn-add-row {
+  position: absolute;
+  right: 0;
+  top: -40px;
+  font-size: 14px;
+}
+
+.regist-form .regist-btn-submit {
+  padding: 16px 0;
+  text-align: right;
+}
+
+.regist-form .regist-btn-submit button {
+  width: 100px;
+  height: 40px;
+  font-weight: 400;
 }
