[FE][Feat]:http context added and error modal repositioned to app.js

--- a/Development/FE/src/auth/pages/Login.css
+++ b/Development/FE/src/auth/pages/Login.css
@@ -38,3 +38,8 @@
 .authentication form > button {
   margin: 20px 0px;
 }
+
+.authentication-form .form-control--invalid p {
+  position: absolute;
+  margin: 2px 5px;
+}
