--- a/Development/FE/src/shared/components/UIElements/Modal.css
+++ b/Development/FE/src/shared/components/UIElements/Modal.css
@@ -25,7 +25,15 @@
 }
 
 .modal__content {
-  padding: 1rem 0.5rem;
+  padding: 1rem 1rem;
+}
+
+.modal__content-flex {
+  display: flex;
+}
+
+.modal__content-flex .error-icon {
+  margin-right: 4px;
 }
 
 .modal__footer {
@@ -34,8 +42,8 @@
 
 @media (min-width: 768px) {
   .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
+    left: calc(50% - 15rem);
+    width: 30rem;
   }
 }
 
