--- a/Development/FE/src/shared/components/UIElements/ErrorModal.css
+++ b/Development/FE/src/shared/components/UIElements/ErrorModal.css
@@ -1,10 +1,14 @@
 .error-icon {
   justify-content: center;
   margin: 8px;
+  padding-right: 24px;
+}
+
+.error-icon svg {
+  padding-right: 5px;
 }
 
 .error-title {
-  margin-left: 4px;
   padding-top: 2px;
   font-weight: 700;
   font-size: 20px;
