--- a/Development/FE/src/user/regist/components/RegistTable.css
+++ b/Development/FE/src/user/regist/components/RegistTable.css
@@ -36,3 +36,16 @@ td {
 .regist-table .div-flex {
   display: flex;
 }
+
+.regist-table .table-column__hide-btn {
+  background-color: transparent;
+  border: 1px solid dimgray;
+  border-radius: 3px;
+  font-size: 12px;
+  color: dimgray;
+  cursor: pointer;
+}
+
+.regist-table .table-column__hide-btn:hover {
+  color: black;
+}
