--- a/Development/FE/src/user/regist/components/RegistTable.css
+++ b/Development/FE/src/user/regist/components/RegistTable.css
@@ -2,14 +2,14 @@ table.regist-table {
   border-spacing: 0px;
   border-style: none;
   border-collapse: collapse;
-  width: 100%;
+  width: fit-content;
   box-shadow: 1px 1px 2px #9f9e9e;
 }
 
 .regist-table th,
 td {
   border: 1px solid rgba(224, 224, 224, 1);
-  padding: 8px;
+  padding: 8px 10px;
   font-size: 12px;
   font-weight: 200;
 }
