--- a/Development/FE/src/user/regist/components/AddTeamModal.css
+++ b/Development/FE/src/user/regist/components/AddTeamModal.css
@@ -23,7 +23,7 @@
     width: 50%;
     border-radius: 12px;
     padding: 7px 8px;
-    background-color: #f2f2f2;
+    background-color: #ede9e9;
     border: none;
     box-shadow: 2px 2px 4px gainsboro;
   }
