--- a/Development/FE/src/user/regist/components/RegistTable.css
+++ b/Development/FE/src/user/regist/components/RegistTable.css
@@ -2,8 +2,8 @@ table.regist-table {
   border-spacing: 0px;
   border-style: none;
   border-collapse: collapse;
-  /* width: fit-content; */
-  width: 100%;
+  width: fit-content;
+  /* width: 100%; */
   box-shadow: 1px 1px 2px #9f9e9e;
 }
 
