--- a/Development/FE/src/user/regist/components/RegistFormat.css
+++ b/Development/FE/src/user/regist/components/RegistFormat.css
@@ -92,6 +92,7 @@
   /* 국적 */
   width: 122px;
 }
+
 #individual-regist-event .table-col-5 {
   /* 주민등록번호 */
   width: 160px;
@@ -151,6 +152,11 @@
   width: 120px;
 }
 
+#team-regist-event .table-col-7 {
+  /* 비고 */
+  width: 150px;
+}
+
 #second-regist-event .table-col-0 {
   /* 인덱스 */
   width: 30px;
@@ -179,6 +185,11 @@
 #second-regist-event .table-col-5 {
   /* 주민등록번호 */
   width: 160px;
+}
+
+#second-regist-event .table-col-6 {
+  /* 비고 */
+  width: 150px;
 }
 
 #second-regist-event .table-col-btn {
