--- a/Development/FE/src/user/regist/pages/RegistTeam.css
+++ b/Development/FE/src/user/regist/pages/RegistTeam.css
@@ -10,6 +10,29 @@
   width: 64px !important;
 }
 
+.regist-team .regist-team-teamNumber {
+  /* width: 44px; */
+  /* display: inline-block; */
+  /* position: relative; */
+  background-color: #424242;
+  padding: 0px 4px;
+  color: white;
+  text-align: center;
+  border-radius: 4px;
+  margin-right: 4px;
+}
+
+/* .regist-team .regist-team-teamNumber::after {
+  content: '';
+  background-color: #5c5c5c;
+  width: 1px;
+  height: 70%;
+  position: absolute;
+  right: 4px;
+  top: 20%;
+  bottom: 10%;
+} */
+
 .regist-team-event {
   min-width: 1000px;
 }
